--- a/Semana-03/css/main.css
+++ b/Semana-03/css/main.css
@@ -221,7 +221,7 @@ form button {
 }
 
 .list {
-    padding: 30px 40px;
+    padding: 30px 30px;
     font-size: 14px;
     display: inline-block;
     margin: auto;
