--- a/Semana-03/css/style.css
+++ b/Semana-03/css/style.css
@@ -30,7 +30,7 @@ a {
 
     .content {
         width: 80%;
-        padding-left: 2em;
+        padding-left: 1.5em;
     }
 
     body::-webkit-scrollbar {
